--- a/Environtment.html
+++ b/Environtment.html
@@ -171,18 +171,18 @@ border-radius: 5px 5px 5px 5px !important;
 
 #helpButton {
     position: absolute;
-    top: 15%;
-    left: 1.5%;
+    top: 18%;
+    left: 8%;
     transform: translateX(-50%);
     background-color: white;
-    border: 1px solid black;
+    border: 2px solid darkblue !important;
     border-radius: 5px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 28px;
-    height: 28px;
+    width: 32px;
+    height: 32px;
     z-index: 1000;
     padding: 10px; 
 }
@@ -201,12 +201,14 @@ border-radius: 5px 5px 5px 5px !important;
     font-size: 12px;
     white-space: nowrap; 
     z-index: 1000; 
-    display: none; 
+    display: block; 
+    
 }
 
 #helpButton:hover::after {
     display: block; 
 }
+
   </style>
 
 	</style>
