--- a/market.html
+++ b/market.html
@@ -28,6 +28,7 @@
         }
         .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
           background-position: -269px 2px !important;
+          display: none !important;
         }
         .draw_feature {
           top: 91% !important;
@@ -137,7 +138,7 @@
           top: 91%;
           height: 37px;
           width: 37px;
-          left: 42.8%;
+          left: 50.100%;
           font-size: 15px;
           border-bottom: 2px solid #2b13bb;
         }
@@ -160,7 +161,7 @@
           background-color: white;
           color: black;
           cursor: pointer;
-          left: 39%;
+          left: 42.600%;
           position: fixed;
           top: 91% !important;
           height: 37px;
@@ -181,7 +182,7 @@
           border: 2px solid #2b13bb;
           border-radius: 5px 5px 5px 5px !important;
           display: none;
-          left: 46.5% !important;
+          left: 46.300% !important;
           border-bottom: 2px solid #2b13bb !important;
         }
       }
@@ -219,7 +220,7 @@
           transition: background-color 0.1s;
         }
         .leaflet-draw-draw-polygon {
-          left: 44% !important;
+          left: 46.400% !important;
           position: fixed !important;
           top: 91% !important;
           height: 37px !important;
@@ -293,7 +294,7 @@
           background-color: white;
           color: black;
           cursor: pointer;
-          left: 36.25%;
+          left: 38.800%;
           position: fixed;
           top: 91%;
           height: 37px;
@@ -313,7 +314,7 @@
           border: 2px solid #2b13bb;
           border-radius: 5px 5px 5px 5px !important;
           display: none;
-          left: 41.35% !important;
+          left: 43.800% !important;
           border-bottom: 2px solid #2b13bb !important;
         }
         #save-button {
@@ -330,7 +331,7 @@
           top: 91%;
           height: 37px;
           width: 37px;
-          left: 38.8%;
+          left: 41.300%;
           font-size: 15px;
           border-bottom: 2px solid #2b13bb;
         }
