--- a/Encroachment.html
+++ b/Encroachment.html
@@ -7,33 +7,33 @@
     <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
 	<!-- <link rel="stylesheet" href="Encroachment.html"/> -->
-	 <style>
-		@media screen and (max-width: 768px) {
-  #editFeatureButton {
-    display: none !important;
-  }
-  #saveDataButton {
-    display: none !important;
-  }
-  #deleteFeatureButton {
-    display: none !important;
-  }
-  .draw_feature {
-    display: none !important;
-  }
-}
+  <style>
+    @media screen and (max-width: 768px) {
+      #editFeatureButton {
+        display: none !important;
+      }
+      #saveDataButton {
+        display: none !important;
+      }
+      #deleteFeatureButton {
+        display: none !important;
+      }
+      .draw_feature {
+        display: none !important;
+      }
+    }
 
-@media only screen and (min-width: 992px){
-    .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
+    @media only screen and (min-width: 992px) {
+      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
         background-position: -27px 2px !important;
-    }
-    .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
+      }
+      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
         background-position: -269px 2px !important;
-    }
-    .draw_feature {
-        top: 70% !important;
-        left: 54% !important;
-        position:fixed !important;
+      }
+      .draw_feature {
+        top: 91% !important;
+        left: 57.6% !important;
+        position: fixed !important;
         height: 37px !important;
         width: 37px !important;
         border: 2px solid #2b13bb !important;
@@ -50,15 +50,15 @@
         border-radius: 5px !important;
         cursor: pointer;
         position: fixed !important;
-        top:89.60%;
-        left: 56.70% !important;
+        top: 89.5% !important;
+        left: 60.45% !important;
         height: 37px !important;
         width: 37px !important;
         transition: background-color 0.1s;
       }
-      
+
       .leaflet-draw-draw-polygon {
-        left: 61.500% !important;
+        left: 53.9% !important;
         position: fixed !important;
         top: 91% !important;
         height: 37px !important;
@@ -66,10 +66,10 @@
         border-bottom: 2px solid #2b13bb !important;
         border: 2px solid #2b13bb;
         border-radius: 5px 5px 5px 5px !important;
-         }
+      }
       .leaflet-draw-draw-circlemarker {
         top: 91%;
-        left: 50.20%;
+        left: 50.2%;
         position: fixed !important;
         border-bottom: 2px solid #2b13bb;
         border: 2px solid #2b13bb;
@@ -93,7 +93,7 @@
         font-size: 17px;
         height: 37px;
         width: 37px;
-        left: 69.10%;
+        left: 69.1%;
       }
       #editFeatureButton {
         border: 2px solid #2b13bb;
@@ -104,7 +104,7 @@
         position: fixed;
         font-size: 15px !important;
         top: 91%;
-        left:65.30%;
+        left: 65.3%;
         padding: 3px 5px !important;
         background: white;
         border-bottom: 2px solid #2b13bb;
@@ -122,7 +122,7 @@
         font-size: 14px;
         height: 37px;
         width: 37px;
-        left: 72.90%;
+        left: 72.9%;
       }
       #save-button {
         /* border: 2px solid rgb(187, 187, 187); */
@@ -138,7 +138,7 @@
         top: 91%;
         height: 37px;
         width: 37px;
-        left:42.8%;
+        left: 42.8%;
         font-size: 15px;
         border-bottom: 2px solid #2b13bb;
       }
@@ -149,7 +149,7 @@
         padding: 0;
         position: fixed !important;
         left: 520px !important;
-        top: 86vh!important;
+        top: 86vh !important;
         white-space: nowrap;
       }
       .delete-button {
@@ -162,11 +162,11 @@
         color: black;
         cursor: pointer;
         left: 39%;
-        position:fixed;
-        top: 91%;
+        position: fixed;
+        top: 91% !important;
         height: 37px;
         width: 37px;
-        /* display: none; */
+        display: none;
         border-top: 2px solid #2b13bb !important;
         border-bottom: 2px solid #2b13bb !important;
         border-left: 2px solid #2b13bb !important;
@@ -175,29 +175,28 @@
       .leaflet-control-edit-interior {
         font-size: 15px;
         padding: 2px 9px;
-        position:fixed !important;
+        position: fixed !important;
         height: 37px !important;
         width: 37px !important;
-        top:91%!important;
+        top: 91% !important;
         border: 2px solid #2b13bb;
         border-radius: 5px 5px 5px 5px !important;
         display: none;
-        left:46.50%!important;
+        left: 46.5% !important;
         border-bottom: 2px solid #2b13bb !important;
       }
-     
-}
-@media only screen and (min-width: 1400px){
-    .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
+    }
+    @media only screen and (min-width: 1400px) {
+      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
         background-position: -27px 2px !important;
-    }
-    .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
+      }
+      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
         background-position: -269px 2px !important;
-    }
-    .draw_feature {
-        top: 91%;
-        left: 49%;
-        position:fixed;
+      }
+      .draw_feature {
+        top: 91% !important;
+        left: 49% !important;
+        position: fixed;
         height: 37px;
         width: 37px;
         border: 2px solid #2b13bb;
@@ -214,8 +213,8 @@
         border-radius: 5px !important;
         cursor: pointer;
         position: fixed !important;
-        top:89.60%;
-        left: 50.900% !important;
+        top: 89.6% !important;
+        left: 50.9% !important;
         height: 37px !important;
         width: 36px !important;
         transition: background-color 0.1s;
@@ -229,10 +228,10 @@
         border-bottom: 2px solid #2b13bb !important;
         border: 2px solid #2b13bb;
         border-radius: 5px 5px 5px 5px !important;
-         }
+      }
       .leaflet-draw-draw-circlemarker {
         top: 91%;
-        left: 46.500%;
+        left: 46.5%;
         position: fixed !important;
         border-bottom: 2px solid #2b13bb;
         border: 2px solid #2b13bb;
@@ -256,7 +255,7 @@
         font-size: 15px;
         height: 37px;
         width: 37px;
-        left: 56.700%;
+        left: 56.5%;
       }
       #editFeatureButton {
         border: 2px solid #2b13bb;
@@ -266,7 +265,7 @@
         display: none;
         position: fixed;
         top: 91%;
-        left:54.110%;
+        left: 53.99%;
         /* padding: 3px 5px !important; */
         background: white;
         border-bottom: 2px solid #2b13bb;
@@ -284,7 +283,7 @@
         font-size: 14px;
         height: 37px;
         width: 37px;
-        left:59.300%;
+        left: 58.98%;
       }
       .delete-button {
         border: 2px solid #2b13bb;
@@ -296,11 +295,11 @@
         color: black;
         cursor: pointer;
         left: 36.25%;
-        position:fixed;
+        position: fixed;
         top: 91%;
         height: 37px;
         width: 37px;
-        /* display: none; */
+        display: none;
         border-top: 2px solid #2b13bb !important;
         border-bottom: 2px solid #2b13bb !important;
         border-left: 2px solid #2b13bb !important;
@@ -308,14 +307,14 @@
       }
       .leaflet-control-edit-interior {
         font-size: 15px;
-        position: fixed!important;
+        position: fixed !important;
         height: 37px !important;
         width: 37px !important;
-        top:91%!important;
+        top: 91% !important;
         border: 2px solid #2b13bb;
         border-radius: 5px 5px 5px 5px !important;
         display: none;
-        left:41.350% !important;
+        left: 41.35% !important;
         border-bottom: 2px solid #2b13bb !important;
       }
       #save-button {
@@ -332,7 +331,7 @@
         top: 91%;
         height: 37px;
         width: 37px;
-        left:38.800%;
+        left: 38.8%;
         font-size: 15px;
         border-bottom: 2px solid #2b13bb;
       }
@@ -343,11 +342,57 @@
         padding: 0;
         position: fixed !important;
         left: 40% !important;
-        top: 86%!important;
+        top: 86% !important;
         white-space: nowrap;
       }
-}
-	 </style>
+    }
+
+    #helpButton .icon {
+      font-size: 10px;
+      width: 16px;
+      height: 16px;
+    }
+
+    #helpButton {
+      position: absolute;
+      top: 15%;
+      left: 1.5%;
+      transform: translateX(-50%);
+      background-color: white;
+      border: 1px solid black;
+      border-radius: 5px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 28px;
+      height: 28px;
+      z-index: 1000;
+      padding: 10px;
+    }
+
+    #helpButton:hover::after {
+      content: "HELP";
+      position: absolute;
+      top: calc(100% + 5px);
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: black;
+      color: white;
+      border: 1px solid black;
+      padding: 5px;
+      border-radius: 5px;
+      font-size: 12px;
+      white-space: nowrap;
+      z-index: 1000;
+      display: none;
+    }
+
+    #helpButton:hover::after {
+      display: block;
+    }
+  </style>
+	
 
     <!-- bootstrap -->
     <link
