--- a/icon .html
+++ b/icon .html
@@ -9,8 +9,25 @@
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        .custom-input-width {
-            width: 20px !important; /* Adjust this value as needed */
+        body {
+            background-color: #f8f9fa; /* Light grey background */
+        }
+
+        .container {
+            margin-top: 50px;
+        }
+
+        .input-group {
+            max-width: 600px; /* Maximum width for the entire input group */
+            margin: 0 auto; /* Center align the input group */
+        }
+
+        .input-group .btn {
+            width: 40px; /* Fixed width for buttons */
+        }
+
+        .input-group .form-control {
+            border-radius: 0; /* Remove border-radius from input */
         }
     </style>
 </head>
@@ -18,17 +35,12 @@
     <div class="container mt-3">
         <div class="input-group">
             <div class="input-group-prepend">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Esri World Geocoder</button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Option 1</a>
-                    <a class="dropdown-item" href="#">Option 2</a>
-                    <a class="dropdown-item" href="#">Option 3</a>
-                </div>
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
             </div>
-            <input type="text" class="form-control custom-input-width" placeholder="Search">
-            <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
-            </div>
+            <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
+                <input type="text" class="form-control" placeholder="Search.." name="search2">
+                <button type="submit" class="btn btn-outline-secondary"><i class="fa fa-search"></i></button>
+            </form>
         </div>
     </div>
 
