--- a/ceo.html
+++ b/ceo.html
@@ -683,8 +683,7 @@ $('#workTableData').html(contentData);
         processData: false,
         contentType: false,
         success: function (response) {
-          console.log(response);
-          //window.location.href = response.data.redirect_Url;
+          window.location.href = response.data.redirect_Url;
         },
         error: function (xhr, status, error) {
           console.error("Save failed:", error);
@@ -725,7 +724,7 @@ $('#workTableData').html(contentData);
         //       );
 
         //       $("#table-container").show();
-        //       console.log(formDataFromStorage);
+        //       
         //       let contentData = "<tr>";
         //       for (const property in formDataFromStorage) {
         //         contentData += `<tr><th>${property}</th><td>${formDataFromStorage[property]}</td></tr>`;
@@ -895,7 +894,7 @@ $('#workTableData').html(contentData);
         //           processData: false,
         //           contentType: false,
         //           success: function (response) {
-        //             console.log(response);
+        //          
         //             window.location.href = response.data.redirect_Url;
         //           },
         //           error: function (xhr, status, error) {
