--- a/garden.html
+++ b/garden.html
@@ -398,7 +398,7 @@ border-radius: 5px 5px 5px 5px !important;
 						const formDataFromStorage = JSON.parse(localStorage.getItem('conceptual_form_data_temp'));
 
 						$('#table-container').show();
-						console.log(formDataFromStorage);
+						
 						let contentData = '<tr>';
 						for (const property in formDataFromStorage) {
 							contentData += `<tr><th>${property}</th><td>${formDataFromStorage[property]}</td></tr>`;
@@ -446,6 +446,9 @@ border-radius: 5px 5px 5px 5px !important;
 					department: department,
 					selectCoordinatesData: selectCoordinatesDataSingle.features,
 					area: area,
+					geometryType:
+          selectCoordinatesDataSingle.features[selectCoordinatesDataSingle.features.length - 1]
+            .geometry.type,
 
 				});
 
@@ -530,7 +533,7 @@ border-radius: 5px 5px 5px 5px !important;
 				  processData: false,
 				  contentType: false,
 				  success: function (response) {
-					//window.location.href = response.data.redirect_Url;   
+					window.location.href = response.data.redirect_Url;   
 				  },
 				  error: function (xhr, status, error) {
 					  console.error("Save failed:", error);
