--- a/market.html
+++ b/market.html
@@ -400,7 +400,7 @@ border-radius: 5px 5px 5px 5px !important;
 						const formDataFromStorage = JSON.parse(localStorage.getItem('conceptual_form_data_temp'));
 
 						$('#table-container').show();
-						console.log(formDataFromStorage);
+						
 						let contentData = '<tr>';
 						for (const property in formDataFromStorage) {
 							contentData += `<tr><th>${property}</th><td>${formDataFromStorage[property]}</td></tr>`;
@@ -450,6 +450,9 @@ border-radius: 5px 5px 5px 5px !important;
 							department: department,
 							selectCoordinatesData: selectCoordinatesDataSingle.features,
 							area: area,
+							geometryType:
+          selectCoordinatesDataSingle.features[selectCoordinatesDataSingle.features.length - 1]
+            .geometry.type,
 
 						});
 
