--- a/ward.html
+++ b/ward.html
@@ -389,7 +389,10 @@
             }
             document
               .getElementById("saveDataButton")
-              .addEventListener("click", function () {
+              .addEventListener("click", function (e) {
+                console.log("Save data button clicked");
+                e.preventDefault();
+                e.stopPropagation();
                 var featureData = selectedFeature.toGeoJSON();
 
 
@@ -437,6 +440,9 @@
                   gis_id: lastInsertedId,
                   department: department,
                   selectCoordinatesData: selectCoordinatesDataSingle.features,
+                  geometryType:
+          selectCoordinatesDataSingle.features[selectCoordinatesDataSingle.features.length - 1]
+            .geometry.type,
                   isWardSelection: true,
                 });
 
@@ -699,7 +705,7 @@
               //     processData: false,
               //     contentType: false,
               //     success: function (response) {
-              //       console.log(response);
+              //    
               //       window.location.href = response.data.redirect_Url;
               //     },
               //     error: function (xhr, status, error) {
