--- a/gardenhoriculture.html
+++ b/gardenhoriculture.html
@@ -49,6 +49,43 @@
   width: 37px;
   left: 849px;
 }
+
+#saveEditGeomButton {
+			border: 2px solid #2b13bb;
+			border-bottom: 2px solid #2b13bb;
+			border-top: 2px solid #2b13bb;
+			border-radius: 5px 5px 5px 5px;
+			background-color: white;
+			position: fixed;
+			color: black;
+			padding: 0px 5px;
+			top: 92%;
+			/* changed from 683px */
+			font-size: 19px;
+			height: 37px;
+			width: 37px;
+			left: 50%;
+			/* changed from 865px */
+		}
+
+		#deleteEditGeomButton {
+			border: 2px solid #2b13bb;
+			border-bottom: 2px solid #2b13bb;
+			border-top: 2px solid #2b13bb;
+			border-radius: 5px 5px 5px 5px;
+			background-color: white;
+			position: fixed;
+			color: black;
+			padding: 0px 5px;
+			top: 92%;
+			/* changed from 683px */
+			font-size: 19px;
+			height: 37px;
+			width: 37px;
+			left: 47%;
+			/* changed from 865px */
+		}
+
 #deleteFeatureButton {
   border: 2px solid #2b13bb;
   border-top: 2px solid #2b13bb;
