--- a/project.html
+++ b/project.html
@@ -25,6 +25,43 @@
   left: 90%; /* changed from 865px */
 }
 
+#saveEditGeomButton {
+			border: 2px solid #2b13bb;
+			border-bottom: 2px solid #2b13bb;
+			border-top: 2px solid #2b13bb;
+			border-radius: 5px 5px 5px 5px;
+			background-color: white;
+			position: fixed;
+			color: black;
+			padding: 0px 5px;
+			top: 92%;
+			/* changed from 683px */
+			font-size: 19px;
+			height: 37px;
+			width: 37px;
+			left: 50%;
+			/* changed from 865px */
+		}
+
+		#deleteEditGeomButton {
+			border: 2px solid #2b13bb;
+			border-bottom: 2px solid #2b13bb;
+			border-top: 2px solid #2b13bb;
+			border-radius: 5px 5px 5px 5px;
+			background-color: white;
+			position: fixed;
+			color: black;
+			padding: 0px 5px;
+			top: 92%;
+			/* changed from 683px */
+			font-size: 19px;
+			height: 37px;
+			width: 37px;
+			left: 47%;
+			/* changed from 865px */
+		}
+
+
 .delete-button {
   border: 2px solid #2b13bb;
   padding: 6px 7.3px;
@@ -288,15 +325,20 @@
 
 
 function toggleSelectLayerButton(show) {
-  var saveBtn = document.getElementById('editFeatureButton');
-  var editBtn = document.getElementById('saveDataButton');
-  var deleteBtn = document.getElementById('deleteFeatureButton');
-  if (saveBtn  && editBtn ) {
-      saveBtn.style.display = show ? 'block' : 'none';
-      editBtn.style.display = show ? 'block' : 'none';
-      deleteBtn.style.display = show ? 'block' : 'none';
-  }
-}
+			var saveBtn = document.getElementById('editFeatureButton');
+			var editBtn = document.getElementById('saveDataButton');
+			var deleteBtn = document.getElementById('deleteFeatureButton');
+			var deleteBtnEdit = document.getElementById('deleteEditGeomButton');
+			var saveBtnEdit = document.getElementById('saveEditGeomButton');
+			if (saveBtn && editBtn) {
+				saveBtn.style.display = show ? 'block' : 'none';
+				editBtn.style.display = show ? 'block' : 'none';
+				deleteBtn.style.display = show ? 'block' : 'none';
+				deleteBtnEdit.style.display = show ? 'none' : 'block'
+				saveBtnEdit.style.display = show ? 'none' : 'block'
+			}
+		}
+
 
 
 
@@ -549,7 +591,34 @@ geometryType:
           selectCoordinatesDataSingle.features[selectCoordinatesDataSingle.features.length - 1]
             .geometry.type,
 });
+if (editMode) {
 
+let editIdTemp = editId.split(".")[ 1 ];
+let geometryTypeTemp = editId.split(".")[ 0 ];
+
+console.log('selectCoordinatesData', selectCoordinatesData);
+
+$.ajax({
+  url: 'APIS/Update_Geometry.php', // Path to your PHP save script
+  type: 'POST',
+  contentType: 'application/json',
+  data: JSON.stringify({
+    selectCoordinatesData: selectCoordinatesDataSingle.features,
+    fid: editIdTemp,
+    geometryType:
+      selectCoordinatesDataSingle.features[ selectCoordinatesDataSingle.features.length - 1 ]
+        .geometry.type,
+  }),
+  success: function (response) {
+    alert('Data saved successfully!');
+  },
+  error: function (error) {
+    console.error('Save request failed:', error);
+  }
+});
+
+}
+else {
 $.ajax({
 type: "POST",
 url: "APIS/gis_update.php",
@@ -613,6 +682,7 @@ error: function (xhr, status, error) {
   console.error("Save failed:", error);
 },
 });
+}
 
 area = turf.length(selectCoordinatesDataSingle.features[0].geometry, { units: 'meters' }); 
 var formData = new FormData();
