--- a/road.html
+++ b/road.html
@@ -61,7 +61,7 @@
       font-size: 19px;
       height: 37px;
       width: 37px;
-      left: 48%;
+      left: 47%;
       /* changed from 865px */
     }
 
@@ -412,10 +412,14 @@
       var saveBtn = document.getElementById('editFeatureButton');
       var editBtn = document.getElementById('saveDataButton');
       var deleteBtn = document.getElementById('deleteFeatureButton');
+      var deleteBtnEdit = document.getElementById('deleteEditGeomButton');
+      var saveBtnEdit = document.getElementById('saveEditGeomButton');
       if (saveBtn && editBtn) {
         saveBtn.style.display = show ? 'block' : 'none';
         editBtn.style.display = show ? 'block' : 'none';
         deleteBtn.style.display = show ? 'block' : 'none';
+        deleteBtnEdit.style.display = show ? 'none' : 'block'
+        saveBtnEdit.style.display = show ? 'none' : 'block'
       }
     }
 
