--- a/water-suppy.html
+++ b/water-suppy.html
@@ -47,6 +47,43 @@
       left: 880px;
     }
 
+    #saveEditGeomButton {
+			border: 2px solid #2b13bb;
+			border-bottom: 2px solid #2b13bb;
+			border-top: 2px solid #2b13bb;
+			border-radius: 5px 5px 5px 5px;
+			background-color: white;
+			position: fixed;
+			color: black;
+			padding: 0px 5px;
+			top: 92%;
+			/* changed from 683px */
+			font-size: 19px;
+			height: 37px;
+			width: 37px;
+			left: 50%;
+			/* changed from 865px */
+		}
+
+		#deleteEditGeomButton {
+			border: 2px solid #2b13bb;
+			border-bottom: 2px solid #2b13bb;
+			border-top: 2px solid #2b13bb;
+			border-radius: 5px 5px 5px 5px;
+			background-color: white;
+			position: fixed;
+			color: black;
+			padding: 0px 5px;
+			top: 92%;
+			/* changed from 683px */
+			font-size: 19px;
+			height: 37px;
+			width: 37px;
+			left: 47%;
+			/* changed from 865px */
+		}
+
+
     #deleteFeatureButton {
       border: 2px solid #2b13bb;
       border-top: 2px solid #2b13bb;
@@ -552,7 +589,34 @@ var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.
           selectCoordinatesDataSingle.features[selectCoordinatesDataSingle.features.length - 1]
             .geometry.type,
                 });
+                if (editMode) {
 
+let editIdTemp = editId.split(".")[ 1 ];
+let geometryTypeTemp = editId.split(".")[ 0 ];
+
+console.log('selectCoordinatesData', selectCoordinatesData);
+
+$.ajax({
+  url: 'APIS/Update_Geometry.php', // Path to your PHP save script
+  type: 'POST',
+  contentType: 'application/json',
+  data: JSON.stringify({
+    selectCoordinatesData: selectCoordinatesDataSingle.features,
+    fid: editIdTemp,
+    geometryType:
+      selectCoordinatesDataSingle.features[ selectCoordinatesDataSingle.features.length - 1 ]
+        .geometry.type,
+  }),
+  success: function (response) {
+    alert('Data saved successfully!');
+  },
+  error: function (error) {
+    console.error('Save request failed:', error);
+  }
+});
+
+}
+else {
                 $.ajax({
                   type: "POST",
                   url: "APIS/gis_update.php",
@@ -616,6 +680,7 @@ var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.
                     console.error("Save failed:", error);
                   },
                 });
+              }
 
                 area = turf.length(selectCoordinatesDataSingle.features[0].geometry, { units: 'meters' });
                 var formData = new FormData();
