--- a/geometry.html
+++ b/geometry.html
@@ -246,7 +246,9 @@
 
         var highlightLayer;
 
-        var API_URL = "http://localhost/pmc_test/";
+        const API_URL = "http://localhost/PMC/IWMS_main/";
+// const API_URL = "https://iwmsgis.pmc.gov.in/gis/iwms/";
+// const API_URL = "https://iwmsgis.pmc.gov.in/gis/test/";  
 
         async function onClickEdit(department, id, Work_ID) {
             console.log(department, id);// remove "" from id
